--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/css/style.css">
-    <title>My Webpage</title>
+    <title>Otter Fanclub</title>
 </head>
 <body>
     <!-- Your content goes here -->
-    <h1>Hello World!</h1>
+    <h1>ROSA THE OTTER</h1>
     <div id="kitty">
         <img src="images/kitten.jpg" alt="This is a kitten.">
         <button id="btn">Click me</button>
