--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <!-- Your content goes here -->
     <h1>ROSA THE OTTER</h1>
-    <div id="kitty">
-        <img src="images/kitten.jpg" alt="This is a kitten.">
-        <button id="btn">Click me</button>
+    <div id="otter">
+        <img src="https://ca-times.brightspotcdn.com/dims4/default/cefdaf5/2147483647/strip/true/crop/5568x3712+0+0/resize/1200x800!/quality/75/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2F10%2Ffc%2Fe19d3f2d446c81c1fc86d4b47719%2Fla-me-rosa-sea-otter-monterey-ba-aquarium-tr18-0726.jpg" alt="ROSAAAA">
+        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.latimes.com%2Fcalifornia%2Fstory%2F2024-06-06%2Frosa-monterey-bay-aquariums-oldest-otter-and-a-social-media-star-dies-at-24&psig=AOvVaw2CwSHzFEp5_V1VL-RSF2T-&ust=1719427222126000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMC439qz94YDFQAAAAAdAAAAABAJ"
+        <button id="btn">rosa</button>
     </div>
 </body>
 </html>
