--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
         <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.latimes.com%2Fcalifornia%2Fstory%2F2024-06-06%2Frosa-monterey-bay-aquariums-oldest-otter-and-a-social-media-star-dies-at-24&psig=AOvVaw2CwSHzFEp5_V1VL-RSF2T-&ust=1719427222126000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMC439qz94YDFQAAAAAdAAAAABAJ"></a>
         <button id="btn">rosa</button>
     </div>
+    <div id="rosa">
+        <p>monterey bay's #1 animal</p>
+    </div>
 </body>
 </html>
