more list stuff

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     <div id="rosa">
         <button id="btn">rosa</button>
         <p>monterey bay's #1 animal</p>
-        <l>cool,epic,swag</l>
+        <l>
+            cool
+            epic
+            swag
+        </l>
     </div>
 </body>
 </html>
