unorganized list (fixed)

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <div id="rosa">
         <button id="btn">rosa</button>
         <p>monterey bay's #1 animal</p>
-        <l>
-            cool
-            epic
-            swag
-        </l>
+        <ul>
+            <li>cool</li>
+            <li>epic</li>
+            <li>swag</li>
+          </ul>
     </div>
 </body>
 </html>
